<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <org.beats.psychomotor.miscellaneous.ResizableButton
            android:id="@+id/sync"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="SYNC" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/blue_overlay"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center">

            <TextView
                android:id="@+id/cs_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/be_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:elevation="0dp"
                android:text="@string/be_host"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Button
                android:id="@+id/be_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/be_client"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center">

            <Button
                android:id="@+id/changeuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeuser"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="bottom|left">

            <org.beats.psychomotor.miscellaneous.ResizableButton
                android:id="@+id/cs_back"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>